<resources>
    <string name="app_name">FootballApps</string>
    <string name="versus">VS</string>
    <string name="defaultScore">0</string>
    <string name="defaultHome">Home</string>
    <string name="defaultAway">Away</string>
    <string name="title_activity_detail_activity">Match Detail</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineup">Lineups</string>
    <string name="goalkeepers">Goalkeepers</string>
    <string name="defenders">Defenders</string>
    <string name="midfielders">Midfielders</string>
    <string name="forwards">Forwards</string>
    <string name="substitutes">Substitutes</string>
    <string name="uninditified">Uninditified</string>
    <string name="favorites">Favorites</string>
    <string name="nextMatch">Next Match</string>
</resources>
