<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventBody"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10sp"
    android:background="@android:color/white"
    android:padding="20sp">

    <TextView
        android:id="@+id/dateEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center_vertical|center|start"
        android:singleLine="true"
        android:text="@string/defaultHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scoreHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateEvent" />

    <TextView
        android:id="@+id/scoreHome"
        android:layout_width="8sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/versus"
        app:layout_constraintStart_toEndOf="@id/teamHome"
        app:layout_constraintTop_toBottomOf="@id/dateEvent" />

    <TextView
        android:id="@+id/versus"
        android:layout_width="18sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:text="@string/versus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scoreAway"
        app:layout_constraintStart_toEndOf="@id/scoreHome"
        app:layout_constraintTop_toBottomOf="@id/dateEvent" />

    <TextView
        android:id="@+id/scoreAway"
        android:layout_width="8sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center"
        android:text="@string/defaultScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/teamAway"
        app:layout_constraintStart_toEndOf="@id/versus"
        app:layout_constraintTop_toBottomOf="@id/dateEvent" />

    <TextView
        android:id="@+id/teamAway"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:gravity="center|end"
        android:singleLine="true"
        android:text="@string/defaultAway"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreAway"
        app:layout_constraintTop_toBottomOf="@+id/dateEvent" />


</android.support.constraint.ConstraintLayout>